changes to the signup page and uploading page

--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,3 +5,13 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.none-button{
+    display: none;
+}
