--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -15,3 +15,11 @@ input::-webkit-inner-spin-button {
 .none-button{
     display: none;
 }
+
+.list_bullet{
+    list-style-type: none
+}
+
+.delete_list :hover{
+    cursor: pointer;
+}
